src/modules/toolbar/toolbar.css
.mk-toolbar {
	--background-color: var(--surface);
	--color: var(--on-surface);

	display: flex;
	align-items: center;
	min-height: 4rem;
	width: 100%;
	background-color: var(--background-color);
	color: var(--color);
}

.mk-toolbar.toolbar-bottom {
	min-height: 3.5rem;
	padding: 0;
	position: absolute;
	bottom: 0;
	overflow: hidden;
}

:where(.mk-toolbar > *:not(script, style)) {
	display: inline-flex;
	align-items: center;
}

/* @manakit-breakpoint */
/* @size */
.mk-toolbar[breakpoint]toolbar-xs {
	min-height: 2rem;
}
.mk-toolbar[breakpoint]toolbar-sm {
	min-height: 3rem;
}
.mk-toolbar[breakpoint]toolbar-lg {
	min-height: 5rem;
}

/* @align-content */
.mk-toolbar [breakpoint]toolbar-start {
	width: 50%;
	justify-content: flex-start;
}
.mk-toolbar [breakpoint]toolbar-center {
	flex-shrink: 0;
}
.mk-toolbar [breakpoint]toolbar-end {
	width: 50%;
	justify-content: flex-end;
}
/* !@manakit-breakpoint */

